issueFixed: text alignement in Contact section and mobile view overflow of experience section

--- a/my-portfolio/src/sections/Contact.css
+++ b/my-portfolio/src/sections/Contact.css
@@ -1,3 +1,21 @@
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.contact-text {
+  width: 100%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .contact-text {
+    max-width: 100% !important;
+  }
+}
+
 .contact-icons {
   display: flex;
   justify-content: center;
